--- a/hm4_44/index.html
+++ b/hm4_44/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="conteiner">
+    <div class="container">
         <header>
             <nav class="clearfix">
                 <h1 class="clearfix">mart</h1>
@@ -74,24 +74,36 @@
             <section>
                 <h2 class="text">latest news</h2>
                 <ul class="news clearfix">
-                    <li><img src="./img/news1.jpg" alt="nice picture">
-                        <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                        <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt 
-                        </p>
-                        <button><a href="https://kurs.com.ua">Read more</a></button></li>
-                    <li><img src="./img/news2.jpg" alt="nice picture">
-                        <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                        <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt 
-                        </p>
-                        <button> <a href="https://www.bigmir.net">Read more</a></button></li>
-                    <li><img src="./img/news3.jpg" alt="nice picture">
-                        <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                        <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt 
-                        </p>
-                        <button><a href="https://www.google.com.ua">Read more</a></button></li>
-            </section>
-        </main>
-    </div >
-</body>
+                    <li>
+                        <a href="https://kurs.com.ua">
+                            <img src="./img/news1.jpg" alt="nice picture">
+                            <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                            <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt 
+                            </p>
+                            <button>Read more</button>   
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.bigmir.net">
+                            <img src="./img/news2.jpg" alt="nice picture">
+                            <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                            <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt 
+                            </p>
+                            <button>Read more</button>
+                        </a>
+                    </li>                       
+                     <li>
+                         <a href="https://www.google.com.ua">
+                            <img src="./img/news3.jpg" alt="nice picture">
+                            <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                            <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt 
+                            </p>
+                            <button>Read more</button>
+                        </a>
+                    </li>
+                </section>
+            </main>
+        </div >
+    </body>
 
 </html>
