--- a/hm4_44/index.html
+++ b/hm4_44/index.html
@@ -1,109 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Module-4</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,900|Roboto:300,400,700,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-
-<body>
-    <div class="container">
-        <header>
-            <nav class="clearfix">
-                <h1 class="clearfix">mart</h1>
-                <ul class="navigation clearfix">
-                    <li><a href="#">home</a></li>
-                    <li><a href="#">about us</a></li>
-                    <li><a href="#">page</a></li>
-                    <li><a href="#">shop</a></li>
-                    <li><a href="#">blog</a></li>
-                    <li class="delli"><a href="#">contact us</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <section>
-                <h2 class="text1">featured products</h2>
-                <ul class="pictures clearfix">
-                    <li><a href="https://www.youtube.com/"><img src="./img/product1.jpg" alt="nice picture" >
-                        <span class="name">Blue tshirt</span>
-                        <span class="price">$26</span>
-                        </a>
-                    </li>
-                    <li><a href="https://www.google.com/search?rlz=1C1GKLB_enUA649UA649&tbm=isch&sxsrf=ACYBGNQ4bvphC2oJh_YvVZ4FGwrrEEbpHA:1576354629199&q=%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8&chips=q:%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8,g_1:%D0%BF%D1%80%D0%B8%D1%80%D0%BE%D0%B4%D0%B0,g_1:%D0%BC%D0%BE%D1%80%D0%B5&sa=X&ved=0ahUKEwjNjNrN-rXmAhXFtYsKHc4yAIIQ4lYIOSgN&biw=1366&bih=625&dpr=1"><img src="./img/product2.jpg" alt="nice picture">
-                        <span class="name">Woman shirt</span>
-                        <span class="price">$31</span>
-                        </a>
-                    </li>
-                    <li><a href="https://www.google.com/search?rlz=1C1GKLB_enUA649UA649&tbm=isch&sxsrf=ACYBGNQ4bvphC2oJh_YvVZ4FGwrrEEbpHA:1576354629199&q=%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8&chips=q:%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8,g_1:%D0%BF%D1%80%D0%B8%D1%80%D0%BE%D0%B4%D0%B0,g_1:%D0%BC%D0%BE%D1%80%D0%B5&sa=X&ved=0ahUKEwjNjNrN-rXmAhXFtYsKHc4yAIIQ4lYIOSgN&biw=1366&bih=625&dpr=1#imgrc=RqsPI-OSeAnTEM:"><img src="./img/product3.jpg" alt="nice picture">
-                        <span class="name">yellow Tshirt</span>
-                        <span class="price">$21</span>
-                        </a>
-                    </li>
-                    <li><a href="https://www.google.com/search?rlz=1C1GKLB_enUA649UA649&tbm=isch&sxsrf=ACYBGNQ4bvphC2oJh_YvVZ4FGwrrEEbpHA:1576354629199&q=%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8&chips=q:%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8,g_1:%D0%BF%D1%80%D0%B8%D1%80%D0%BE%D0%B4%D0%B0,g_1:%D0%BC%D0%BE%D1%80%D0%B5&sa=X&ved=0ahUKEwjNjNrN-rXmAhXFtYsKHc4yAIIQ4lYIOSgN&biw=1366&bih=625&dpr=1#imgrc=4dPoS1_6PgVpZM:"><img src="./img/product4.jpg" alt="nice picture">
-                        <span class="name">cool lingerie</span>
-                        <span class="price">$56</span>
-                        </a>
-                    </li>
-                    <li><a href="https://www.google.com/search?rlz=1C1GKLB_enUA649UA649&tbm=isch&sxsrf=ACYBGNQ4bvphC2oJh_YvVZ4FGwrrEEbpHA:1576354629199&q=%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8&chips=q:%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8,g_1:%D0%BF%D1%80%D0%B8%D1%80%D0%BE%D0%B4%D0%B0,g_1:%D0%BC%D0%BE%D1%80%D0%B5&sa=X&ved=0ahUKEwjNjNrN-rXmAhXFtYsKHc4yAIIQ4lYIOSgN&biw=1366&bih=625&dpr=1#imgrc=QM-fJNwcwEjCvM:"><img src="./img/product5.jpg" alt="nice picture">
-                        <span class="name">Blue tshirt</span>
-                        <span class="price">$26</span>
-                        </a>
-                    </li>
-                    <li><a href="https://www.google.com/search?rlz=1C1GKLB_enUA649UA649&tbm=isch&sxsrf=ACYBGNQ4bvphC2oJh_YvVZ4FGwrrEEbpHA:1576354629199&q=%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8&chips=q:%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8,g_1:%D0%BF%D1%80%D0%B8%D1%80%D0%BE%D0%B4%D0%B0,g_1:%D0%BC%D0%BE%D1%80%D0%B5&sa=X&ved=0ahUKEwjNjNrN-rXmAhXFtYsKHc4yAIIQ4lYIOSgN&biw=1366&bih=625&dpr=1#imgrc=kKcArblEiYuhxM:"><img src="./img/product6.jpg" alt="nice picture">
-                        <span class="name">Woman shirt</span>
-                        <span class="price">$31</span>
-                        </a>
-                    </li>
-                    <li><a href="https://www.google.com/search?rlz=1C1GKLB_enUA649UA649&tbm=isch&sxsrf=ACYBGNQ4bvphC2oJh_YvVZ4FGwrrEEbpHA:1576354629199&q=%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8&chips=q:%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8,g_1:%D0%BF%D1%80%D0%B8%D1%80%D0%BE%D0%B4%D0%B0,g_1:%D0%BC%D0%BE%D1%80%D0%B5&sa=X&ved=0ahUKEwjNjNrN-rXmAhXFtYsKHc4yAIIQ4lYIOSgN&biw=1366&bih=625&dpr=1#imgrc=ls-OShM7JKwuEM:"><img src="./img/product7.jpg" alt="nice picture">
-                        <span class="name">yellow Tshir</span>
-                        <span class="price">$21</span>
-                        </a>
-                    </li>
-                    <li><a href="https://www.google.com/search?rlz=1C1GKLB_enUA649UA649&tbm=isch&sxsrf=ACYBGNQ4bvphC2oJh_YvVZ4FGwrrEEbpHA:1576354629199&q=%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8&chips=q:%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8,g_1:%D0%BF%D1%80%D0%B8%D1%80%D0%BE%D0%B4%D0%B0,g_1:%D0%BC%D0%BE%D1%80%D0%B5&sa=X&ved=0ahUKEwjNjNrN-rXmAhXFtYsKHc4yAIIQ4lYIOSgN&biw=1366&bih=625&dpr=1#imgrc=iIUQYRGDUgXaYM:"><img src="./img/product8.jpg" alt="nice picture">
-                        <span class="name">cool lingerie</span>
-                        <span class="price">$56</span>
-                        </a>
-                    </li>
-                </ul>
-            </section>
-            <section>
-                <h2 class="text">latest news</h2>
-                <ul class="news clearfix">
-                    <li>
-                        <a href="https://kurs.com.ua">
-                            <img src="./img/news1.jpg" alt="nice picture">
-                            <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                            <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt 
-                            </p>
-                            <button>Read more</button>   
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.bigmir.net">
-                            <img src="./img/news2.jpg" alt="nice picture">
-                            <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                            <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt 
-                            </p>
-                            <button>Read more</button>
-                        </a>
-                    </li>                       
-                     <li>
-                         <a href="https://www.google.com.ua">
-                            <img src="./img/news3.jpg" alt="nice picture">
-                            <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                            <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt 
-                            </p>
-                            <button>Read more</button>
-                        </a>
-                    </li>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Module-4</title>
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,900|Roboto:300,400,700,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./css/style.css">
+    </head>
+    <body>
+        <div class="container">
+            <header>
+                <nav class="clearfix">
+                    <h1 class="clearfix">mart</h1>
+                    <ul class="navigation clearfix">
+                        <li><a href="#">home</a></li>
+                        <li><a href="#">about us</a></li>
+                        <li><a href="#">page</a></li>
+                        <li><a href="#">shop</a></li>
+                        <li><a href="#">blog</a></li>
+                        <li class="delli"><a href="#">contact us</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <main>
+                <section>
+                    <h2 class="text1">featured products</h2>
+                    <ul class="pictures clearfix">
+                        <li><a href="https://www.youtube.com/"><img src="./img/product1.jpg" alt="nice picture" >
+                            <h4 class="name">Blue tshirt</h4>
+                            <p class="price">$26</p>
+                            </a>
+                        </li>
+                        <li><a href="https://www.google.com/search?rlz=1C1GKLB_enUA649UA649&tbm=isch&sxsrf=ACYBGNQ4bvphC2oJh_YvVZ4FGwrrEEbpHA:1576354629199&q=%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8&chips=q:%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8,g_1:%D0%BF%D1%80%D0%B8%D1%80%D0%BE%D0%B4%D0%B0,g_1:%D0%BC%D0%BE%D1%80%D0%B5&sa=X&ved=0ahUKEwjNjNrN-rXmAhXFtYsKHc4yAIIQ4lYIOSgN&biw=1366&bih=625&dpr=1"><img src="./img/product2.jpg" alt="nice picture">
+                            <h4 class="name">Woman shirt</h4>
+                            <p class="price">$31</p>
+                            </a>
+                        </li>
+                        <li><a href="https://www.google.com/search?rlz=1C1GKLB_enUA649UA649&tbm=isch&sxsrf=ACYBGNQ4bvphC2oJh_YvVZ4FGwrrEEbpHA:1576354629199&q=%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8&chips=q:%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8,g_1:%D0%BF%D1%80%D0%B8%D1%80%D0%BE%D0%B4%D0%B0,g_1:%D0%BC%D0%BE%D1%80%D0%B5&sa=X&ved=0ahUKEwjNjNrN-rXmAhXFtYsKHc4yAIIQ4lYIOSgN&biw=1366&bih=625&dpr=1#imgrc=RqsPI-OSeAnTEM:"><img src="./img/product3.jpg" alt="nice picture">
+                            <h4 class="name">yellow Tshirt></h4>
+                            <p class="price">$21</p>
+                            </a>
+                        </li>
+                        <li><a href="https://www.google.com/search?rlz=1C1GKLB_enUA649UA649&tbm=isch&sxsrf=ACYBGNQ4bvphC2oJh_YvVZ4FGwrrEEbpHA:1576354629199&q=%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8&chips=q:%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8,g_1:%D0%BF%D1%80%D0%B8%D1%80%D0%BE%D0%B4%D0%B0,g_1:%D0%BC%D0%BE%D1%80%D0%B5&sa=X&ved=0ahUKEwjNjNrN-rXmAhXFtYsKHc4yAIIQ4lYIOSgN&biw=1366&bih=625&dpr=1#imgrc=4dPoS1_6PgVpZM:"><img src="./img/product4.jpg" alt="nice picture">
+                            <h4 class="name">cool lingerie</h4>
+                            <p class="price">$56</p>
+                            </a>
+                        </li>
+                        <li><a href="https://www.google.com/search?rlz=1C1GKLB_enUA649UA649&tbm=isch&sxsrf=ACYBGNQ4bvphC2oJh_YvVZ4FGwrrEEbpHA:1576354629199&q=%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8&chips=q:%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8,g_1:%D0%BF%D1%80%D0%B8%D1%80%D0%BE%D0%B4%D0%B0,g_1:%D0%BC%D0%BE%D1%80%D0%B5&sa=X&ved=0ahUKEwjNjNrN-rXmAhXFtYsKHc4yAIIQ4lYIOSgN&biw=1366&bih=625&dpr=1#imgrc=QM-fJNwcwEjCvM:"><img src="./img/product5.jpg" alt="nice picture">
+                            <h4 class="name">Blue tshirt></h4>
+                            <p class="price">$26</p>
+                            </a>
+                        </li>
+                        <li><a href="https://www.google.com/search?rlz=1C1GKLB_enUA649UA649&tbm=isch&sxsrf=ACYBGNQ4bvphC2oJh_YvVZ4FGwrrEEbpHA:1576354629199&q=%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8&chips=q:%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8,g_1:%D0%BF%D1%80%D0%B8%D1%80%D0%BE%D0%B4%D0%B0,g_1:%D0%BC%D0%BE%D1%80%D0%B5&sa=X&ved=0ahUKEwjNjNrN-rXmAhXFtYsKHc4yAIIQ4lYIOSgN&biw=1366&bih=625&dpr=1#imgrc=kKcArblEiYuhxM:"><img src="./img/product6.jpg" alt="nice picture">
+                            <h4 class="name">Woman shirt</h4>
+                            <p class="price">$31</p>
+                            </a>
+                        </li>
+                        <li><a href="https://www.google.com/search?rlz=1C1GKLB_enUA649UA649&tbm=isch&sxsrf=ACYBGNQ4bvphC2oJh_YvVZ4FGwrrEEbpHA:1576354629199&q=%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8&chips=q:%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8,g_1:%D0%BF%D1%80%D0%B8%D1%80%D0%BE%D0%B4%D0%B0,g_1:%D0%BC%D0%BE%D1%80%D0%B5&sa=X&ved=0ahUKEwjNjNrN-rXmAhXFtYsKHc4yAIIQ4lYIOSgN&biw=1366&bih=625&dpr=1#imgrc=ls-OShM7JKwuEM:"><img src="./img/product7.jpg" alt="nice picture">
+                            <h4 class="name">yellow Tshir</h4>
+                            <p class="price">$21</p>
+                            </a>
+                        </li>
+                        <li><a href="https://www.google.com/search?rlz=1C1GKLB_enUA649UA649&tbm=isch&sxsrf=ACYBGNQ4bvphC2oJh_YvVZ4FGwrrEEbpHA:1576354629199&q=%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8&chips=q:%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B8,g_1:%D0%BF%D1%80%D0%B8%D1%80%D0%BE%D0%B4%D0%B0,g_1:%D0%BC%D0%BE%D1%80%D0%B5&sa=X&ved=0ahUKEwjNjNrN-rXmAhXFtYsKHc4yAIIQ4lYIOSgN&biw=1366&bih=625&dpr=1#imgrc=iIUQYRGDUgXaYM:">
+                            <img src="./img/product8.jpg" alt="nice picture">
+                            <h4 class="name">cool lingerie</h4>
+                            <p class="price">$56</p>
+                            </a>
+                        </li>
+                    </ul>
                 </section>
-            </main>
-        </div >
-    </body>
-
+                <section>
+                    <h2 class="text">latest news</h2>
+                    <ul class="news clearfix">
+                        <li>
+                                <img src="./img/news1.jpg" alt="nice picture">
+                                <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                                <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt 
+                                </p>
+                                <a href="https://kurs.com.ua">Read more</a>   
+                        </li>
+                        <li>
+                                <img src="./img/news2.jpg" alt="nice picture">
+                                <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                                <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt 
+                                </p>
+                                <a href="https://www.bigmir.net">Read more</a>
+                        </li>                       
+                        <li>
+                                <img src="./img/news3.jpg" alt="nice picture">
+                                <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                                <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt 
+                                </p>
+                                <a href="https://www.google.com/">Read more</a>
+                        </li>
+                    </section>
+                </main>
+            </div>
+        </body>
 </html>
