--- a/hm5_final/index.html
+++ b/hm5_final/index.html
@@ -33,9 +33,9 @@
                     <h2 class="title-slider">AFFORDABLE PARIS TOURS</h2>
                     <p class="slider-text">CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
                 </div>
-                    <div class="btn container ">
-                        <button class="button slider_left"></button>
-                        <button class="button slider_right"></button>
+                 <div class="btn container ">
+                     <button class="button slider_left"></button>
+                    <button class="button slider_right"></button>
                     </div>
                     <!-- <div class="slaider"> -->
 
@@ -52,9 +52,9 @@
                             <li class="card_item ">
                                 <img class="card_img" src="./img/foto1.jpg" alt="" width="255" height="322">
                                     <div class="">
-                                        <div class="_text-content">
+                                        <div class="card-info">
                                             <a href="" class="card_name">Blue Tshirt</a>
-                                            <div class="price">$26</div>
+                                            <span class="price">$26</span>
                                         </div>
                                     </div>
                                         <div class="overlay">
@@ -69,10 +69,11 @@
                             </li>
                             <li class="card_item ">
                                 <img class="card_img" src="./img/foto2.jpg" alt="" width="255" height="322">
-                                        <div class="">
+                                        <div class="card-info">
                                             <a href="" class="card_name">woman shirt</a>
                                             <span class="price">$31</span>
-                                    </div>
+                                        </div>
+                                    
                                     <div class="overlay">
                                         <div class="overline_icon clearfix">
                                         <button class="overline_1234 like"><img src="./img/hover/heart.png" alt="like"></button>
@@ -80,12 +81,12 @@
                                         <button class="overline_1234 time"><img src="./img/hover/clock.png" alt="time"></button>
                                         <button class="overline_12345">add to cart</button>
                                         </div>
-                                    </div>
+                            </div>
                             </li>
                             <li class="card_item">
                                 <img class="card_img" src="./img/foto3.jpg" alt="" width="255" height="322">
                                     <div class="">
-                                        <div class="">
+                                        <div class="card-info">
                                             <a href="" class="card_name">yellow tshirt</a>
                                             <span class="price">$21</span>
                                         </div>
@@ -103,7 +104,7 @@
                             <li class="card_item">
                                 <img class="card_img" src="./img/foto4.jpg" alt="" width="255" height="322">
                                     <div class="">
-                                        <div class="_text-content">
+                                        <div class="card-info">
                                             <a href="" class="card_name">cool lingeria</a>
                                             <span class="price">$56</span>
                                         </div>
