--- a/hm6/index.html
+++ b/hm6/index.html
@@ -32,7 +32,6 @@
             <h3 class="title3">We work with</h3>
             <h2 class="title2">Amazing Services</h2>
         </section>
-        <section>
         <div class="inform">
             <ul class="inform-product">
                 <li class="phtotography">
@@ -49,7 +48,7 @@
                 </li>
                 <li class="creativity">
                     <div class="card">
-                        <pspan class="name-inform-product">creativity</pspan>
+                        <span class="name-inform-product">creativity</span>
                         <p class="inform-product">Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
                     </div>
                 </li>
@@ -78,21 +77,34 @@
             <div class="team">
                 <h3 class="team3">Who we are</h3>
                 <h2 class="team2">Meet our team</h2>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                <p class="text">Lorem ipsum dolor sit amet, .onsectetur adipiscing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
                     minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat.</p>
                 
-                <ul class="team-list">
-                    <li>
-                    <img src="./img/team1.png" alt="" width="380" height="470">   
-                    <div class="name-position">
-                        <span class="name">Matthew Dix</span>
-                        <span class="position">Graphic Design</span>
-                    </div>
+                <ul class="team-list container">
+                    <li class="team-item">
+                        <div class="overlay-wrapper">
+                        <img class="team_foto" src="./img/team1.png" alt="" width="380" height="470"> 
+                       
+                        <div class="overlay">
+                            <div class="overlay-icon">
+                                <ul class="social-network">
+                                    <li class="network_social"><a class="overline-social fecebook" href=""></a></li>
+                                    <li class="network_social"><a class="overline-social-tw" href="">twitter</a></li>
+                                    <li class="network_social"><a class="overline-social-pin" href="">pinterest</a></li>
+                                    <li class="network_social"><a class="overline-social-ins" href="">instagram</a></li>
+                                </ul>
+                            </div>
+                            </div>
+                        </div>
+                                <div class="name-position">
+                                    <span class="name">Matthew Dix</span>
+                                    <span class="position">Graphic Design</span>
+                                </div>
                     </li>
-                    <li>
-                        <img src="./img/team2.png" alt="" width="380" height="470">
+                    <li class="team-item">
+                        <img class="team_foto" src="./img/team2.png" alt="" width="380" height="470">
                         <div></div>
                         <span class="name-position">
                             <span class="name">Christopher CAmbpell</span>
@@ -100,8 +112,8 @@
                         </span>
                     </li>
 
-                    <li>
-                        <img src="./img/team3.png" alt="" width="380" height="470">
+                    <li class="team-item">
+                        <img class="team_foto" src="./img/team3.png" alt="" width="380" height="470">
                         <div class="name-position">
                             <span class="name">Michael Fertig</span>
                             <span class="position">Developer</span>
