--- a/hm6/index.html
+++ b/hm6/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300i,400i,700&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300i,400,400i,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/normalize.css">
     <link rel="stylesheet" href="./style/style.css">
     <title>Document</title>
@@ -34,9 +33,9 @@
         </section>
         <div class="inform">
             <ul class="inform-product">
-                <li class="phtotography">
+                <li class="photography">
                     <div class="card">
-                        <span class="name-inform-product">phtotography</span>
+                        <span class="name-inform-product">phtography</span>
                         <p class="inform-product">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempur</p>
                     </div>
                 </li>
@@ -77,7 +76,7 @@
             <div class="team">
                 <h3 class="team3">Who we are</h3>
                 <h2 class="team2">Meet our team</h2>
-                <p class="text">Lorem ipsum dolor sit amet, .onsectetur adipiscing elit, sed do
+                <p class="text-team container">Lorem ipsum dolor sit amet, onsectetur adipiscing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
                     minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat.</p>
@@ -86,14 +85,13 @@
                     <li class="team-item">
                         <div class="overlay-wrapper">
                         <img class="team_foto" src="./img/team1.png" alt="" width="380" height="470"> 
-                       
                         <div class="overlay">
                             <div class="overlay-icon">
                                 <ul class="social-network">
-                                    <li class="network_social"><a class="overline-social fecebook" href=""></a></li>
-                                    <li class="network_social"><a class="overline-social-tw" href="">twitter</a></li>
-                                    <li class="network_social"><a class="overline-social-pin" href="">pinterest</a></li>
-                                    <li class="network_social"><a class="overline-social-ins" href="">instagram</a></li>
+                                    <a class="network_social" href=""></a>
+                                    <a class="network_social" href=""></a>
+                                    <a class="network_social" href=""></a>
+                                    <a class="network_social" href=""></a>
                                 </ul>
                             </div>
                             </div>
@@ -104,8 +102,19 @@
                                 </div>
                     </li>
                     <li class="team-item">
+                        <div class="overlay-wrapper">
                         <img class="team_foto" src="./img/team2.png" alt="" width="380" height="470">
-                        <div></div>
+                        <div class="overlay">
+                            <div class="overlay-icon">
+                                <ul class="social-network">
+                                    <a class="network_social" href="fb"></a>
+                                    <a class="network_social" href="tw"></a>
+                                    <a class="network_social" href="pin"></a>
+                                    <a class="network_social" href="inst"></a>
+                                </ul>
+                            </div>
+                            </div>
+                            </div>
                         <span class="name-position">
                             <span class="name">Christopher CAmbpell</span>
                             <span class="position">Branding/UX design</span>
@@ -113,7 +122,19 @@
                     </li>
 
                     <li class="team-item">
+                        <div class="overlay-wrapper">
                         <img class="team_foto" src="./img/team3.png" alt="" width="380" height="470">
+                        <div class="overlay">
+                            <div class="overlay-icon">
+                                <ul class="social-network">
+                                    <a class="network_social" href="fb"></a>
+                                    <a class="network_social" href="tw"></a>
+                                    <a class="network_social" href="pin"></a>
+                                    <a class="network_social" href="inst"></a>
+                                </ul>
+                            </div>
+                            </div>
+                            </div>
                         <div class="name-position">
                             <span class="name">Michael Fertig</span>
                             <span class="position">Developer</span>
