--- a/hm6/index.html
+++ b/hm6/index.html
@@ -33,37 +33,37 @@
         </section>
         <div class="inform">
             <ul class="inform-product">
-                <li class="photography">
+                <li class="photography icon">
                     <div class="card">
                         <span class="name-inform-product">phtography</span>
                         <p class="inform-product">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempur</p>
                     </div>
                 </li>
-                <li class="design">
+                <li class="design icon">
                     <div class="card">
                         <span class="name-inform-product">Web Design</span>
                         <p class="inform-product">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
                     </div>
                 </li>
-                <li class="creativity">
+                <li class="creativity icon">
                     <div class="card">
                         <span class="name-inform-product">creativity</span>
                         <p class="inform-product">Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
                     </div>
                 </li>
-                <li class="seo">
+                <li class="seo icon">
                     <div class="card">
                         <span class="name-inform-product">seo</span>
                         <p class="inform-product">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
                     </div>
                 </li>
-                <li class="internet">
+                <li class="internet icon">
                     <div class="card">
                         <span class="name-inform-product">Css/html</span>
                         <p class="inform-product">Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor</p>
                     </div>
                 </li>
-                <li class="digital">
+                <li class="digital icon">
                     <div class="card">
                         <span class="name-inform-product">digital</span>
                         <p class="inform-product">Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
