--- a/hm5_final/index.html
+++ b/hm5_final/index.html
@@ -27,7 +27,7 @@
             </header>
 
         <section class="slider">
-            <div class="for_slider clearfix">
+            <div class="slider-info clearfix">
                 <img src="./img/fon-1.jpg" alt="" width="1600" >
                 <div class="cn-slider container clearfix">
                     <h2 class="title-slider">AFFORDABLE PARIS TOURS</h2>
