--- a/hm6/index.html
+++ b/hm6/index.html
@@ -88,10 +88,10 @@
                         <div class="overlay">
                             <div class="overlay-icon">
                                 <ul class="social-network">
-                                    <a class="network_social" href=""></a>
-                                    <a class="network_social" href=""></a>
-                                    <a class="network_social" href=""></a>
-                                    <a class="network_social" href=""></a>
+                                    <li class="network_social"></li>
+                                    <li class="network_social"></li>
+                                    <li class="network_social"></li>
+                                    <li class="network_social"></li>
                                 </ul>
                             </div>
                             </div>
@@ -107,10 +107,10 @@
                         <div class="overlay">
                             <div class="overlay-icon">
                                 <ul class="social-network">
-                                    <a class="network_social" href="fb"></a>
-                                    <a class="network_social" href="tw"></a>
-                                    <a class="network_social" href="pin"></a>
-                                    <a class="network_social" href="inst"></a>
+                                    <li class="network_social"></li>
+                                    <li class="network_social"></li>
+                                    <li class="network_social"></li>
+                                    <li class="network_social"></li>
                                 </ul>
                             </div>
                             </div>
@@ -127,10 +127,10 @@
                         <div class="overlay">
                             <div class="overlay-icon">
                                 <ul class="social-network">
-                                    <a class="network_social" href="fb"></a>
-                                    <a class="network_social" href="tw"></a>
-                                    <a class="network_social" href="pin"></a>
-                                    <a class="network_social" href="inst"></a>
+                                    <li class="network_social"></li>
+                                    <li class="network_social"></li>
+                                    <li class="network_social"></li>
+                                    <li class="network_social"></li>
                                 </ul>
                             </div>
                             </div>
@@ -142,7 +142,6 @@
                     </li>
                 </ul>
             </div>
-            </section>
             <footer>
                 <div class="foot container">
                     <span class="text-foter">&copy; 2016 MoGo free PSD template by <a href="dev">Laaqiq</a></span>
@@ -152,6 +151,6 @@
                     </form>
                 </div>
             </footer>
-
+    </section>
 </body>
 </html>
