--- a/hm6/index.html
+++ b/hm6/index.html
@@ -28,8 +28,8 @@
             </div>
         </header>
         <section class="inform11">
-            <h3 class="title3">We work with</h3>
-            <h2 class="title2">Amazing Services</h2>
+            <h3 class="title3"><span>We work with</span><span class="title2">Amazing Services</span></h3>
+
         </section>
         <div class="inform">
             <ul class="inform-product">
@@ -74,8 +74,7 @@
         </section>    
         <section>
             <div class="team">
-                <h3 class="team3">Who we are</h3>
-                <h2 class="team2">Meet our team</h2>
+                <h3 class="team3"><span>Who we are</span><span class="team2">Meet our team</span></h3 c>
                 <p class="text-team container">Lorem ipsum dolor sit amet, onsectetur adipiscing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
                     minim veniam, quis nostrud exercitation ullamco laboris nisi ut
