--- a/hm7/index.html
+++ b/hm7/index.html
@@ -61,7 +61,7 @@
                             <div class="container contact-us"><h2 class="title-contact">Contact us</h2>
                                 <h3 class="text-contact">Proin iaculis purus consequat sem cure.</h3></div>
                                 
-                                <form class="form-contact" action="#" method="GET">
+                                <form class="form-contact" action="#">
                                    <div class="forms1">
                                     <div class="input"> 
                                         <input type="text" name="name" placeholder="YOUR NAME*" pattern="[A-Za-z]{2,60}" required> 
@@ -69,7 +69,7 @@
                                         <input type="text" name="subject" placeholder="SUBJECT" >
                                     </div>
                                     <div class="textarea">
-                                        <textarea name="body" cols="30" rows="5" placeholder="YOUR MASSAGE*" minlength="5" maxlength="250" required></textarea>
+                                        <textarea class="textmesseg" name="body" cols="30" rows="5" placeholder="YOUR MASSAGE*" minlength="5" maxlength="250" required></textarea>
                                     </div>
                                 </div>
                         
