--- a/hm6/index.html
+++ b/hm6/index.html
@@ -12,69 +12,67 @@
     <title>Document</title>
 </head>
 <body>
-    <section class="container">
         <header>
-            <div class="nava">
-                <a class="logo" href="">MoGo</a>
-                    <nav class="navigatin">
-                        <ul class="nav">
-                            <li><a href="">About</a></li>
-                            <li><a href="">Service</a></li>
-                            <li><a href="">work</a></li>
-                            <li><a href="">Blog</a></li>
-                            <li><a href="">Contact</a></li>
-                        </ul>
-                    </nav>
+            <div class="container">
+                <div class="nava">
+                    <a class="logo" href="">MoGo</a>
+                        <nav class="navigatin">
+                            <ul class="nav">
+                                <li><a href="">About</a></li>
+                                <li><a href="">Service</a></li>
+                                <li><a href="">work</a></li>
+                                <li><a href="">Blog</a></li>
+                                <li><a href="">Contact</a></li>
+                            </ul>
+                        </nav>
+                </div>
             </div>
+           
         </header>
-        <section class="inform11">
-            <h3 class="title3"><span>We work with</span><span class="title2">Amazing Services</span></h3>
-
-        </section>
-        <div class="inform">
-            <ul class="inform-product">
-                <li class="photography icon">
-                    <div class="card">
-                        <span class="name-inform-product">phtography</span>
-                        <p class="inform-product">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempur</p>
-                    </div>
-                </li>
-                <li class="design icon">
-                    <div class="card">
-                        <span class="name-inform-product">Web Design</span>
-                        <p class="inform-product">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
-                    </div>
-                </li>
-                <li class="creativity icon">
-                    <div class="card">
-                        <span class="name-inform-product">creativity</span>
-                        <p class="inform-product">Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
-                    </div>
-                </li>
-                <li class="seo icon">
-                    <div class="card">
-                        <span class="name-inform-product">seo</span>
-                        <p class="inform-product">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
-                    </div>
-                </li>
-                <li class="internet icon">
-                    <div class="card">
-                        <span class="name-inform-product">Css/html</span>
-                        <p class="inform-product">Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor</p>
-                    </div>
-                </li>
-                <li class="digital icon">
-                    <div class="card">
-                        <span class="name-inform-product">digital</span>
-                        <p class="inform-product">Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                    </div>
-                </li>
-            </ul>
-        </div>
-        </section>    
+                <h3 class="title3"><span>We work with</span><span class="title2">Amazing Services</span></h3>
+                <div class="inform">
+                    <ul class="inform-product container">
+                        <li class="photography icon">
+                            <div class="card">
+                                <span class="name-inform-product">phtography</span>
+                                <p class="inform-product">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempur</p>
+                            </div>
+                        </li>
+                        <li class="design icon">
+                            <div class="card">
+                                <span class="name-inform-product">Web Design</span>
+                                <p class="inform-product">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                            </div>
+                        </li>
+                        <li class="creativity icon">
+                            <div class="card">
+                                <span class="name-inform-product">creativity</span>
+                                <p class="inform-product">Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                            </div>
+                        </li>
+                        <li class="seo icon">
+                            <div class="card">
+                                <span class="name-inform-product">seo</span>
+                                <p class="inform-product">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
+                            </div>
+                        </li>
+                        <li class="internet icon">
+                            <div class="card">
+                                <span class="name-inform-product">Css/html</span>
+                                <p class="inform-product">Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor</p>
+                            </div>
+                        </li>
+                        <li class="digital icon">
+                            <div class="card">
+                                <span class="name-inform-product">digital</span>
+                                <p class="inform-product">Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
         <section>
             <div class="team">
-                <h3 class="team3"><span>Who we are</span><span class="team2">Meet our team</span></h3 c>
+                <h3 class="team3"><span>Who we are</span><span class="team2">Meet our team</span></h3>
                 <p class="text-team container">Lorem ipsum dolor sit amet, onsectetur adipiscing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
                     minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -141,15 +139,18 @@
                     </li>
                 </ul>
             </div>
-            <footer>
-                <div class="foot container">
-                    <span class="text-foter">&copy; 2016 MoGo free PSD template by <a href="dev">Laaqiq</a></span>
-                    <form class="email-form" action="#">
-                        <input type="email" placeholder="your email..." class="email-input" />
-                        <button type="submit" class="subscribe-btn">subscribe</button>
-                    </form>
-                </div>
-            </footer>
+                <footer class="footer">
+                    <div class="container">
+                        <p class="footer-text">
+                          © 2016 MoGo free PSD template by
+                          <a href="#" class="footer-link">Laaqiq</a>
+                        </p>
+                        <form action="#" class="input-box">
+                          <input class="input-text" type="email" placeholder="Your Email..." />
+                          <button type="button" class="input-box-btn">Subscribe</button>
+                        </form>
+                      </div>
+                      </footer>
     </section>
 </body>
 </html>
