--- a/hm7/index.html
+++ b/hm7/index.html
@@ -72,7 +72,7 @@
                                     </div>
                                 </div>
                         
-                            </form>
+                            </form>s
                             <button class="btn" type="submit">Send message</button>
 
                        </div>  
