--- a/hm8_2/index.html
+++ b/hm8_2/index.html
@@ -1,70 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Module-8</title>
-    <link rel="stylesheet" href="./style/normalize.css">
-    <link rel="stylesheet" href="./style/style.css">
-</head>
-<body>
-    <!-- HEADER -->
-    <header class="header">
-        <div class="container">
-        <nav class="navigation-buttons">
-            <ul class="nav-list">
-                <li><a href="#" class="login-button">Log in</a>
-                </li>
-                <li><a href="#" class="signup-button">Sign up</a>
-                </li>
-            </ul>
-            <a class="logo">URLAUBSGLÜCK</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Module-08</title>
+    <link rel="stylesheet" href="./style/normalize.css" />
+    <link rel="stylesheet" href="./style/style.css" />
+  </head>
+
+  <body>
+    <!-- navigation -->
+    <header>
+      <div class="background">
+        <nav class="nav container">
+          <a class="logo" href="">URLAUBSGLÜCK</a>
+          <ul class="menu">
+                <li class="menu-item"><button class="login-btn">Log in</button></li>
+                <li class="menu-item"><button class="signup-btn">Sign up</button></li>
+          </ul>
         </nav>
-        <div class="section-titles">
-           <h2 class="section-title">Share your holiday dreams</h2>
-           <p class="section-description">And find the perfect partner to fullfill it</p>
-           <a class="action-button" href="#">Find your holiday partner</a>
+        <div class="title container">
+          <h2>Share your <span class="dream">holiday dreams</span> </h2>
+          <p>And find the perfect partner to fullfill it</p>
+          <button>Find your holiday partner</button>
         </div>
-    </div>
+      </div>
     </header>
-    <!-- SECTON PARTNERS -->
-   <main>
-       <section class="partners container">
-<h2 class="partners-title">Meet a partner for your best holiday</h2>
-<ul class="partners-list">
-     <li class="partners-list-item type-one">       
-        <div class="partner-list__img-wrapper item-one">
-            <img src="./img/tablet/bh1.png" alt="partner image" class="partner-list-img" width="121" height="121">
-        </div>
-      <h3 class="partners-list-name">Bradley Hunter</h3>
-      <div class="description">Based in Chicago. I love playing tennis and loud music.</div>
-    </li>
-    <li class="partners-list-item type-two">
-        <div class="partner-list__img-wrapper item-two">
-    <img src="./img/tablet/Ellipse1.png" alt="partner image" class="partner-list-img" width="121" height="121">
-    </div>
-    <h3 class="partners-list-name">Lucas Marsha</h3>
-    <div class="description">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.
-        </div>
-    </li>
-    <li class="partners-list-item type-three">    
-            <div class="partner-list__img-wrapper item-three">
-    <img src="./img/tablet/bh2.png" alt="partner image" class="partner-list-img" width="121" height="121">
-    </div>
-    <h3 class="partners-list-name">Heather Walker</h3>
-    <div class="description">I'm a happy person that loves cats and climbing on mountains.</div>
-     </li>
-    <li class="partners-list-item type-four">
-            <div class="partner-list__img-wrapper item-four">
-    <img src="./img/tablet/hw.png" alt="partner image" class="partner-list-img" width="121" height="121">
-   </div>
-    <h3 class="partners-list-name">Bradley Hunter</h3>
-    <div class="description">Based in Chicago. I love playing tennis and loud music.</div>
-     </li>
-</ul>
-<a class="action-btn" href="#">See other partners</a>
-</section>
-   </main>
-</body>
+
+    <main>
+      <div class="wraper container">
+        <h3 class="partners">Meet a partner for your best holiday</h3>
+        <ul>
+          <li class="partner partner-1">
+            <img src="/img/tablet/bh1.png" alt="portret" width="120" height="120" />
+            <h3>Bradley Hunter</h3>
+            <p>Based in Chicago. I love playing tennis and loud music.</p>
+          </li>
+          <li class="partner partner-2">
+            <img src="./img/tablet/Ellipse1.png" alt="portret" width="120" height="120" />
+            <h3>Lucas Marsha</h3>
+            <p>I get my inspiration from nature and objects around me. I have a
+                passion to colours, typography and skateboards.</p>
+          </li>
+          <li class="partner partner-3">
+            <img src="./img/tablet/hw.png" alt="portret" width="121" height="120" />
+            <h3> Heater Walkerr</h3>
+            <p>
+              I'm a happy person that loves cats and climbing on mountains.
+            </p>
+          </li>
+          <li class="partner partner-4">
+            <img src="./img/tablet/bh2.png" alt="portret" width="121" height="120" />
+            <h3>Bradley Hunter</h3>
+            <p>Based in Chicago. I love playing tennis and loud music.</p>
+          </li>
+        </ul>
+        
+          <button>See other partners</button>
+        
+      </div>
+    </main>
+  </body>
 </html>
