--- a/hm10/index.html
+++ b/hm10/index.html
@@ -125,7 +125,7 @@
                 <div class="overlay-icons">
                   <a href="#" class="overlay-icon facebook">
                     <svg class="overlay-icon-facebook-svg" width="30" height="30">
-                      <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                      <use href="./img.svg#icon-facebook"></use>
                     </svg>
                   </a>
                   <a href="#" class="overlay-icon twitter">
@@ -172,7 +172,7 @@
                   </a>
                   <a href="#" class="overlay-icon instagram">
                     <svg class="overlay-icon-instagram-svg" width="30" height="30">
-                      <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                      <use href="./sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </div>
