--- a/hm10/index.html
+++ b/hm10/index.html
@@ -203,7 +203,7 @@
                   </a>
                   <a href="#" class="overlay-icon instagram">
                     <svg class="overlay-icon-instagram-svg" width="30" height="30">
-                      <use href="/symbol-defs.svg#icon-instagram"></use>
+                      <use href="img/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </div>
